[package]
name = "ansiterm"
description = "Library for ANSI terminal colours and styles (bold, underline)"
edition = "2021"
authors = [
    "Preston Thorpe <preston@unlockedlabs.org>",
    "Sandro-Alessio Gierens <sandro@gierens.de>",
    "Benjamin Sago <ogham@bsago.me>",
    "Ryan Scheel (Havvy) <ryan.havvy@gmail.com>",
    "Josh Triplett <josh@joshtriplett.org>"
    ]
documentation = "https://docs.rs/ansiterm"
homepage = "https://github.com/rustadopt/ansiterm-rs"
license = "MIT"
readme = "README.md"
version = "0.12.2"
repository = "https://github.com/rustadopt/ansiterm-rs"

[lib]
name = "ansiterm"

[features]
derive_serde_style = ["serde"]

[dependencies.serde]
version = "1.0.90"
features = ["derive"]
optional = true

[dependencies.ansi_colours]
version = "1.1.1"
default-features = false
optional = true

[target.'cfg(target_os="windows")'.dependencies.winapi]
version = "0.3.4"
features = ["consoleapi", "errhandlingapi", "fileapi", "handleapi", "processenv"]

[dev-dependencies]
doc-comment = "0.3"
regex = "1.1.9"

[dev-dependencies.serde_json]
version = "1.0.39"
